[package]
name = "semantic_scoring"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.108.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokenizers = { version = "0.22.1", features = ["http"] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
